# rag-from-scratch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/sample_docs/: agents.md  lcel_overview.md  rag_concepts.md
eval/: chunk_experiment_report.json  chunk_experiment_summary.md  eval_report.json  eval_summary.md  test_set.json
scripts/: crawl_docs.py  evaluate.py  experiment_chunk_size.py  ingest.py  query.py  run_frontend.py  serve.py
src/: config.py
src/api/: app.py
src/document_pipeline/: __init__.py  chunker.py  loader.py  processor.py
src/embeddings/: store.py
src/evaluation/: evaluator.py
src/frontend/: streamlit_app.py
src/generation/: __init__.py  generator.py
src/retrieval/: hybrid.py
tests/: test_pipeline.py  test_retrieval.py
